syntax = "proto3";
package dymensionxyz.dymension.bridgingfee;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/bridgingfee/types";

message EventHLBridgingFee {
  // ID of the hook that collected the fee
  string hook_id = 1;
  // Address of the sender who paid the fee
  string sender = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Fee amount and denomination that was collected
  string fee = 3;
  // Token ID that triggered the fee collection
  string token_id = 4;
}