syntax = "proto3";
package dymensionxyz.dymension.eibc;

import "gogoproto/gogo.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/eibc/types";

// if given in eibc metadata, eibc fullfillment funds will be directed to a module address
// and a hook will be executed
message FulfillHookMetadata {
  string hook_name = 1;
  bytes hook_data = 2;
}

message ForwardHookMetadata {
  // TODO:
}
